style.css
html{
  box-sizing: border-box;
}

body{
  margin: 0px;
  min-height: 100vh;
}

h1, p, button, input {
  font-family: 'neon', sans-serif;
  line-height: 1.25em;
}

.flex-center{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.round-bordered {
  border: 1px solid black;
  border-radius: 10px;
}

.card{
  width: 200px;
  height: 250px;
}

.card-header {
  display: block;
  margin: 30px 0px;
  text-align: center;
}

.card-header h1{
  font-size: 2em;
  margin: 0;
  display: inline-block;
}

form.card-form{
  display: flex;
  flex-direction: column;
  padding: 30px 30px 30px 30px;
}

form.card-form * {
  outline: none;
}

form.card-form input#question-input{
  border: 1px solid black;
  height: 20px;
}

form.card-form button{
  margin-top: 30px;
}

.button{
  min-width: 100px;
  border: 1px solid black;
  background-color: transparent;
  padding: 2px 0px;
  border-radius: 20px;
}

section#result{
  position: absolute;
  background-color: white;
  z-index: 1;
}

p#result-question {
  padding: 0px 10px;
  font-size: 0.8em;
  margin: 0;
  letter-spacing: -0.15em;
}

section#result p#result-large{
  margin: 30px;
  font-size: 1.9em;
  font-weight: bolder;
}

.result-yes p#result-large{
  color: #00249C;
}

.result-no p#result-large{
  color: #CF4520;
}

.result-loading p#result-large{
  color: #454142;
}

